wonder-format start pack

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "twine-wonder",
-  "version": "0.0.1",
+  "nameFormat": "Wonder",
+  "author": "Kvisaz [Sergey Tokarev]",
+  "version": "0.0.4",
   "description": "Twine Wonder Format",
   "main": "",
+  "repository": "https://github.com",
   "scripts": {
     "start": "webpack && webpack-dev-server",
     "build": "webpack --mode production",
-    "server": "webpack-dev-server"
+    "server": "http-server"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.5.2",
