--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "webpack && webpack-dev-server",
     "build": "webpack --mode production",
-    "server": "webpack --mode production && http-server"
+    "server": "webpack --mode production && webpack-dev-server"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.5.2",
