--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "twine-wonder",
   "nameFormat": "Wonder",
   "author": "Kvisaz [Sergey Tokarev]",
-  "version": "0.0.1",
-  "versionPath": "v.0.0.1",
+  "version": "0.9.1",
   "description": "Twine Wonder Format",
   "icon": "icon.svg",
+  "bundleScript": "index.js",
   "main": "",
   "repository": "https://github.com",
   "scripts": {
@@ -14,6 +14,7 @@
     "server": "webpack --mode production && node twineFormatBuild && webpack-dev-server"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^4.5.2",
     "html-webpack-plugin": "^4.0.0-alpha",
     "ts-loader": "^5.3.2",
