--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "twine-wonder",
   "nameFormat": "Wonder",
   "author": "Kvisaz [Sergey Tokarev]",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "Twine Wonder Format",
   "icon": "icon.svg",
   "bundleScript": "index.js",
@@ -22,7 +22,8 @@
     "webpack-cli": "^3.1.0",
     "webpack-concat-plugin": "^3.0.0",
     "webpack-dev-server": "^3.1.5",
-    "webpack-watch-files-plugin": "^1.0.2"
+    "webpack-watch-files-plugin": "^1.0.2",
+    "zip-a-folder": "0.0.12"
   },
   "dependencies": {}
 }
