--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "repository": "https://github.com/Kvisaz/twine-wonder",
   "scripts": {
     "start": "webpack && webpack-dev-server",
+    "buildTest": "webpack",
     "build": "webpack --mode production && node twineFormatBuild.js",
     "server": "webpack --mode production && node twineFormatBuild && webpack-dev-server"
   },
